[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rflog"
authors = [{name = "rainfishs", email = "support@rainfishs.cc"}]
description = "A tool for simple logging in Python applications."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
dynamic = ["version"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging :: Utilities",
]

[project.urls]
Homepage = "https://github.com/rainfishs/rflog"

[tool.setuptools.dynamic]
version = {attr = "rflog.__version__"}